--- a/src/styles/Jobs.module.scss
+++ b/src/styles/Jobs.module.scss
@@ -4,6 +4,16 @@
   row-gap: 49px;
 }
 
+.job_box {
+}
+
+.link,
+.link:link,
+.link:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
 .image_wrapper {
   width: 50px;
   height: 50px;
