--- a/src/styles/Jobs.module.scss
+++ b/src/styles/Jobs.module.scss
@@ -1,31 +1,139 @@
-.section {
+// // // // // // // // // // // // // // // // // // // //
+
+.filter_bar_section {
+  margin-bottom: 57px;
+}
+
+// // // // // // // // // // // // // // // // // // // //
+
+.jobs_section {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+
   row-gap: 49px;
+  padding: 0 24px;
+
+  @media only screen and (min-width: 768px) {
+    column-gap: 10px;
+    padding: 0 40px;
+  }
+
+  @media only screen and (min-width: 1200px) {
+    max-width: 1190px;
+    margin: 0 auto;
+    column-gap: 30px;
+  }
 }
 
 .job_box {
-}
+  width: 100%;
+  max-width: 500px;
+  border-radius: 6px;
+  padding: 49px 32px 36px 32px;
 
-.link,
-.link:link,
-.link:visited {
-  text-decoration: none;
-  color: inherit;
-}
+  position: relative;
 
-.image_wrapper {
-  width: 50px;
-  height: 50px;
+  background-color: var(--color-bg-box);
+  transition: background-color 0.2s;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @media only screen and (min-width: 768px) {
+    max-width: 339px;
+  }
 
-  border-radius: 15px;
+  @media only screen and (min-width: 1200px) {
+    max-width: 350px;
+  }
 
-  img {
-    width: revert;
-    height: revert;
+  .link,
+  .link:link,
+  .link:visited {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .image_wrapper {
+    width: 50px;
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 15px;
+
+    position: absolute;
+    top: -25px;
+    left: 32px;
+
+    img {
+      width: revert;
+      height: revert;
+    }
+  }
+
+  ul {
+    list-style: none;
+    display: flex;
+    column-gap: 28px;
+    margin-bottom: 16px;
+
+    color: #6e8098;
+    font-size: 16px;
+    font-weight: 400;
+  }
+
+  li:first-child {
+    position: relative;
+
+    &::after {
+      content: "";
+      width: 4px;
+      height: 4px;
+      border-radius: 50%;
+      background-color: #6e8098;
+
+      position: absolute;
+      top: 50%;
+      right: -14px;
+      transform: translateY(-50%);
+    }
+  }
+
+  h2 {
+    color: var(--color-text-title);
+    transition: color 0.2s;
+
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 17px;
+  }
+
+  p {
+    color: #6e8098;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 44px;
+  }
+
+  address {
+    color: #5964e0;
+    font-size: 14px;
+    font-weight: 700;
+    font-style: normal;
   }
 }
+
+// // // // // // // // // // // // // // // // // // // //
+
+.btn_wrapper {
+  text-align: center;
+}
+
+.btn {
+  margin: 32px 0 62px 0;
+
+  cursor: pointer;
+}
+
+// // // // // // // // // // // // // // // // // // // //
