--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -16,8 +16,13 @@
 
   @media only screen and (min-width: 1200px) {
     padding-top: 44px;
-
     background-image: url("/assets/desktop/bg-pattern-header.svg");
+  }
+
+  a,
+  a:link,
+  a:visited {
+    display: flex;
   }
 
   .wrapper {
@@ -26,7 +31,7 @@
     justify-content: space-between;
 
     @media only screen and (min-width: 768px) {
-      max-width: 750px;
+      max-width: 1030px;
       margin: 0 auto;
     }
 
