--- a/src/styles/Jobs.module.scss
+++ b/src/styles/Jobs.module.scss
@@ -1,7 +1,43 @@
 // // // // // // // // // // // // // // // // // // // //
 
 .filter_bar_section {
+  padding: 0 24px;
+  margin-top: -40px;
   margin-bottom: 57px;
+
+  form {
+    // display: flex;
+
+    background-color: var(--color-bg-box);
+    transition: background-color 0.2s;
+
+    height: 80px;
+    padding: 16px;
+    border-radius: 6px;
+  }
+
+  .filter_btn,
+  .search_btn {
+    width: 48px;
+    height: 48px;
+    border-radius: 5px;
+
+    border: none;
+
+    cursor: pointer;
+  }
+
+  .filter_btn {
+    background-color: transparent;
+    margin-right: 14px;
+
+    img {
+    }
+  }
+
+  .search_btn {
+    background-color: #5964e0;
+  }
 }
 
 // // // // // // // // // // // // // // // // // // // //
@@ -131,9 +167,35 @@
 }
 
 .btn {
+  color: var(--color-white);
+  font-size: 16px;
+  font-weight: 700;
+
+  background-color: #5964e0;
+  transition: background-color 0.2s, transform 0.2s;
+
+  border-radius: 5px;
+  padding: 16px 30px;
   margin: 32px 0 62px 0;
+  border: none;
 
   cursor: pointer;
+
+  &:hover {
+    background-color: #939bf4;
+  }
+
+  &:active {
+    transform: scale(0.9);
+  }
+
+  @media only screen and (min-width: 768px) {
+    margin: 56px 0 61px 0;
+  }
+
+  @media only screen and (min-width: 1200px) {
+    margin: 56px 0 104px 0;
+  }
 }
 
 // // // // // // // // // // // // // // // // // // // //
