--- a/src/styles/FilterBar.module.scss
+++ b/src/styles/FilterBar.module.scss
@@ -3,6 +3,11 @@
   margin-top: -40px;
   margin-bottom: 57px;
 
+  @media only screen and (min-width: 768px) {
+    padding: 0 40px;
+    margin-bottom: 70px;
+  }
+
   form {
     display: flex;
 
@@ -17,6 +22,29 @@
     height: 80px;
     border-radius: 6px;
     overflow: hidden;
+
+    @media only screen and (min-width: 768px) {
+      max-width: 689px;
+    }
+
+    @media only screen and (min-width: 1117px) {
+      max-width: 1037px;
+    }
+
+    @media only screen and (min-width: 1200px) {
+      max-width: 1110px;
+    }
+  }
+
+  // // // // // // // // // // // // // // // // // // // //
+
+  .icon_search {
+    @media only screen and (min-width: 768px) {
+      position: absolute;
+      left: 24px;
+      top: 28px;
+      pointer-events: none;
+    }
   }
 
   .input_title {
@@ -33,6 +61,14 @@
     color: var(--color-text-title);
     transition: color 0.2s;
 
+    @media only screen and (min-width: 768px) {
+      flex-grow: 32.2%;
+      width: revert;
+      border-right: 1px solid rgba(110, 128, 152, 0.2);
+      border-radius: 6px 0 0 6px;
+      padding-left: 64px;
+    }
+
     &:focus {
       outline: none;
     }
@@ -42,75 +78,97 @@
     }
   }
 
+  // // // // // // // // // // // // // // // // // // // //
+
   .filter_popup {
-    display: none;
+    @media only screen and (max-width: 767px) {
+      display: none;
+    }
+
+    @media only screen and (min-width: 768px) {
+      flex-grow: 67.8%;
+    }
 
     .layout {
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(0, 0, 0, 0.4965);
+      @media only screen and (max-width: 767px) {
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.4965);
 
-      position: fixed;
-      z-index: 10;
-      top: 0;
-      left: 0;
+        position: fixed;
+        z-index: 10;
+        top: 0;
+        left: 0;
+      }
+
+      @media only screen and (min-width: 768px) {
+        display: none;
+      }
     }
 
     .wrapper {
-      overflow: hidden;
-      background-color: var(--color-bg-box);
-      margin: 0 24px;
-      padding: 72px 24px 0 24px;
-      width: 327px;
-      height: 217px;
-      border-radius: 6px;
-      transition: background-color 0.2s;
+      @media only screen and (max-width: 767px) {
+        overflow: hidden;
+        background-color: var(--color-bg-box);
+        margin: 0 24px;
+        padding: 72px 24px 0 24px;
+        width: 327px;
+        height: 217px;
+        border-radius: 6px;
+        transition: background-color 0.2s;
 
-      position: fixed;
-      z-index: 15;
-      top: 225px;
-      left: 50%;
-      transform: translateX(-50%);
+        position: fixed;
+        z-index: 15;
+        top: 225px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
     }
   }
 
   .show_popup {
-    display: block;
+    @media only screen and (max-width: 767px) {
+      display: block;
+    }
   }
 
   .icon_loc {
-    position: absolute;
-    z-index: 20;
-    top: 24px;
-    left: 24px;
-    pointer-events: none;
+    @media only screen and (max-width: 767px) {
+      position: absolute;
+      z-index: 20;
+      top: 24px;
+      left: 24px;
+      pointer-events: none;
+    }
   }
 
   .select_loc {
-    position: absolute;
-    z-index: 19;
-    left: 0;
-    top: 0;
+    @media only screen and (max-width: 767px) {
+      position: absolute;
+      z-index: 19;
+      left: 0;
+      top: 0;
 
-    font-size: 16px;
-    font-weight: 400;
+      font-size: 16px;
+      font-weight: 400;
 
-    padding-left: 57px;
-    width: 110%;
-    height: 72px;
+      padding-left: 57px;
+      width: 110%;
+      height: 72px;
 
-    border: 0;
-    border-bottom: 1px solid rgba(110, 128, 152, 0.2);
-    border-radius: 6px;
+      border: 0;
+      border-bottom: 1px solid rgba(110, 128, 152, 0.2);
+      border-radius: 6px;
 
-    background-color: transparent;
+      background-color: transparent;
 
-    &:focus {
-      outline: none;
+      &:focus {
+        outline: none;
+      }
+
+      color: var(--color-text-title);
+      transition: color 0.2s;
     }
-
-    color: var(--color-text-title);
-    transition: color 0.2s;
   }
 
   .checkbox_label {
@@ -145,23 +203,27 @@
     }
   }
 
+  // // // // // // // // // // // // // // // // // // // //
+
   .smallScreenSearch {
-    width: 100%;
-    padding: 16px 0;
-    border: none;
-    border-radius: 5px;
+    @media only screen and (max-width: 767px) {
+      width: 100%;
+      padding: 16px 0;
+      border: none;
+      border-radius: 5px;
 
-    background-color: #5964e0;
+      background-color: #5964e0;
 
-    color: var(--color-white);
-    font-size: 16px;
-    font-weight: 700;
+      color: var(--color-white);
+      font-size: 16px;
+      font-weight: 700;
 
-    cursor: pointer;
-    transition: background-color 0.2s;
+      cursor: pointer;
+      transition: background-color 0.2s;
 
-    &:hover {
-      background-color: #939bf4;
+      &:hover {
+        background-color: #939bf4;
+      }
     }
   }
 
@@ -179,6 +241,14 @@
     cursor: pointer;
     transition: transform 0.2s, background-color 0.2s;
 
+    @media only screen and (min-width: 768px) {
+      width: 80px;
+
+      font-size: 16px;
+      font-weight: 700;
+      color: var(--color-white);
+    }
+
     &:active {
       transform: scale(0.9);
     }
@@ -189,9 +259,6 @@
     margin-left: auto;
 
     right: 74px;
-
-    img {
-    }
   }
 
   .search_btn {
@@ -204,3 +271,5 @@
     }
   }
 }
+
+// // // // // // // // // // // // // // // // // // // //
