--- a/src/styles/FilterBar.module.scss
+++ b/src/styles/FilterBar.module.scss
@@ -45,6 +45,10 @@
       top: 28px;
       pointer-events: none;
     }
+
+    @media only screen and (min-width: 1117px) {
+      left: 32px;
+    }
   }
 
   .input_title {
@@ -68,6 +72,15 @@
       padding-left: 64px;
     }
 
+    @media only screen and (min-width: 1117px) {
+      width: 400px;
+      padding-left: 72px;
+    }
+
+    @media only screen and (min-width: 1200px) {
+      width: 463px;
+    }
+
     &:focus {
       outline: none;
     }
@@ -82,9 +95,6 @@
   .filter_popup {
     @media only screen and (max-width: 767px) {
       display: none;
-    }
-
-    @media only screen and (min-width: 768px) {
     }
 
     .layout {
@@ -187,6 +197,10 @@
       border-right: 1px solid rgba(110, 128, 152, 0.2);
     }
 
+    @media only screen and (min-width: 1117px) {
+      width: 300px;
+    }
+
     &:focus {
       outline: none;
     }
@@ -201,6 +215,11 @@
 
     @media only screen and (min-width: 768px) {
       margin-left: 20px;
+    }
+
+    @media only screen and (min-width: 1117px) {
+      margin-left: 32px;
+      padding-right: 75px;
     }
 
     div {
