--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -45,3 +45,44 @@ button,
 input {
   font-family: inherit;
 }
+
+.error {
+  margin-top: -40px;
+  padding: 0 24px;
+  margin-bottom: 60px;
+
+  div {
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 24px 0 32px 0;
+    border-radius: 6px;
+    text-align: center;
+    color: var(--color-text-title);
+    background-color: var(--color-bg-box);
+    transition: color 0.2, background-color 0.2s;
+
+    @media only screen and (min-width: 768px) {
+      max-width: 689px;
+      padding: 32px 0 44px 0;
+    }
+  }
+
+  h1 {
+    font-size: 30px;
+    margin-bottom: 6px;
+
+    @media only screen and (min-width: 768px) {
+      font-size: 36px;
+      margin-bottom: 10px;
+    }
+  }
+
+  p {
+    font-size: 16px;
+    opacity: 0.75;
+
+    @media only screen and (min-width: 768px) {
+      font-size: 20px;
+    }
+  }
+}
