--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,6 +13,7 @@
   --color-bg: #f4f6f8;
   --color-bg-box: #ffffff;
   --color-text-title: #19202d;
+  --color-text: rgba(110, 128, 152, 1);
 
   --color-link-bg: rgba(89, 100, 224, 0.1);
   --color-link-bg-hover: rgba(89, 100, 224, 0.35);
@@ -23,6 +24,7 @@
   --color-bg: #121721;
   --color-bg-box: #19202d;
   --color-text-title: #ffffff;
+  --color-text: rgba(157, 174, 194, 1);
 
   --color-link-bg: rgba(255, 255, 255, 0.1);
   --color-link-bg-hover: rgba(255, 255, 255, 0.25);
