--- a/src/styles/JobPage.module.scss
+++ b/src/styles/JobPage.module.scss
@@ -100,6 +100,50 @@
 // // // // // // // // // // // // // // // // // // // //
 
 .section_apply_now {
+  background-color: var(--color-bg-box);
+  transition: background-color 0.2s;
+
+  padding: 24px;
+  border-radius: 5px 5px 0 0;
+
+  @media only screen and (min-width: 768px) {
+    padding: 24px 40px;
+  }
+
+  .wrapper {
+    max-width: 500px;
+    margin: 0 auto;
+
+    @media only screen and (min-width: 768px) {
+      max-width: 730px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    div:first-child {
+      display: none;
+
+      @media only screen and (min-width: 768px) {
+        display: block;
+
+        p:first-child {
+          color: var(--color-text-title);
+          transition: color 0.2s;
+
+          font-size: 20px;
+          font-weight: 700;
+          margin-bottom: 12px;
+        }
+
+        p:last-child {
+          color: rgba(110, 128, 152, 1);
+          font-size: 16px;
+          font-weight: 400;
+        }
+      }
+    }
+  }
 }
 
 // // // // // // // // // // // // // // // // // // // //
